# CXX-practice

./: README.md  main.cc  moreh4.yml
argument-forwarding/: main.cpp
bank/: main.cc  sub.cc
bit/: main.c
cmake/: CMakeLists.txt
cmake/include/: calc.h
cmake/lib/: CMakeLists.txt
cmake/lib/calc/: CMakeLists.txt  calc.cpp
cmake/src/: CMakeLists.txt  main.cpp
custom_class_as_a_map_key/: Makefile  main.cc  myClass.cc  myClass.h
custom_class_as_a_unordered_map_key/: main.cc
fanotify/: main.cpp
futex_test/: main.cpp
heap/: main.c
list/: main.cc
mfence/: CMakeLists.txt  fence.cpp  no_fence.cpp
move_assign/: main.cc
peterson/: peterson_sem.h
pipe/: log  main.c  text.txt
pipe/example/: main.c
place/: main.cc
placement-new/: Makefile  main.cc
protobuf/: CMakeLists.txt  main.cpp  serialized_graph.proto
python/: 1.py  2.py  mbox.txt  romeo.txt
remove_dup/: main.cpp
remove_if/: main.cpp
static/: main.cc
tourna/: main.cc  peterson.h  peterson_sem.h
two-phase-barrier/: main.c
